made an event in html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 		<header>
 			<h1>Javascript Events</h1>
 		</header>
-
+		<div>
+			<p id="event1" onmousedown="mouseDown()" onmouseup="mouseUp()">Let's see what happens when I mouse down and up.</p>
+		</div>
+		<img id="event2" src="images/black_star.png">
 	</main>
 </body>
 </html>
