did a few events for the javascript assignment

--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
 			<h1>Javascript Events</h1>
 		</header>
 		<div>
-			<p id="event1" onmousedown="mouseDown()" onmouseup="mouseUp()">Let's see what happens when I mouse down and up.</p>
+			<p id="event1" onmouseup="mouseUp()" onmousedown="mouseDown()">When has justice ever been as simple as a rule book? Maybe if we felt any human loss as keenly as we feel one of those close to us, human history would be far less bloody. Could someone survive inside a transporter buffer for 75 years? When has justice ever been as simple as a rule book? Worf, It's better than music. It's jazz. and attack the Romulans. Computer, belay that order. I'll be sure to note that in my log. The look in your eyes, I recognize it. You used to have it for me. Fate protects fools, little children and ships named Enterprise
+ I can't. As much as I care about you, my first duty is to the ship. Computer, lights up! A lot of things can change in twelve years, Admiral. Your head is not an artifact!</p>
 		</div>
-		<img id="event2" src="images/black_star.png">
+		<div>
+			<p id="event2" ondblclick="dblClick()">When has justice ever been as simple as a rule book? Maybe if we felt any human loss as keenly as we feel one of those close to us, human history would be far less bloody. Could someone survive inside a transporter buffer for 75 years? When has justice ever been as simple as a rule book? Worf, It's better than music. It's jazz. and attack the Romulans. Computer, belay that order. I'll be sure to note that in my log. The look in your eyes, I recognize it. You used to have it for me. Fate protects fools, little children and ships named Enterprise. I can't. As much as I care about you, my first duty is to the ship. Computer, lights up! A lot of things can change in twelve years, Admiral. Your head is not an artifact!</p>
+		</div>
+		<div>
+			<p id="event3">When has justice ever been as simple as a rule book? Maybe if we felt any human loss as keenly as we feel one of those close to us, human history would be far less bloody. Could someone survive inside a transporter buffer for 75 years? When has justice ever been as simple as a rule book? Worf, It's better than music. It's jazz. and attack the Romulans. Computer, belay that order. I'll be sure to note that in my log. The look in your eyes, I recognize it. You used to have it for me. Fate protects fools, little children and ships named Enterprise. I can't. As much as I care about you, my first duty is to the ship. Computer, lights up! A lot of things can change in twelve years, Admiral. Your head is not an artifact!</p>
+		</div>
+		<img onmouseover="src='images/final_strike.gif'" onmouseout="src='images/black_star.png'" src="images/black_star.png" width="500" height="500">
 	</main>
 </body>
 </html>
